Store thumbnails as JPEGs, don't lose pixels on retina displays; fix shadows.
We store thumbnails as JPEGs to save some space. This requires us to also
make thumbnails opaque (since JPEG can't store transparency) which then
also requires a bit of CSS fixup to ensure that the inset shadows appear
over the (newly-opaque) thumbnails.

We also use the toDataURLHD method when saving layer checkpoints (including
thumbnails) to ensure that we don't lose resolution on retina displays.

Finally, only dump gallery thumbnails the first time the gallery is loaded,
so we don't waste too much storage on the logs.

--- a/sass/ncolors.scss
+++ b/sass/ncolors.scss
@@ -49,9 +49,12 @@ body.dev #framerate {
     & > canvas {
       @extend %maxed;
       background: white; /* hide UUID text */
+    }
+    &:after {
+      @extend %maxed;
       // a bit of a 3d button effect
-      @include box-shadow(inset  5px  5px 20px rgba(255,255,255,0.65),
-                          inset -5px -5px 20px rgba(  0,  0,  0,0.10));
+      @include box-shadow(inset  5px  5px 30px rgba(255,255,255,0.25),
+                          inset -5px -5px 20px rgba(  0,  0,  0,0.15));
     }
     &.new:after {
       @extend %maxed;
@@ -60,6 +63,7 @@ body.dev #framerate {
       background-position: center center;
       background-repeat: no-repeat;
       background-color: #404040; /* "toolbar grey" */
+      @include box-shadow(none);
     }
   }
 }
